[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visage-sdk"
version = "1.0.0"
description = "Zero-dependency Python SDK for the Visage B2B API — verify AI likeness licenses, log usage events, and manage deals."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Visage Labs", email = "support@visagelabs.net" }]
requires-python = ">=3.10"
keywords = ["visage", "ai", "likeness", "licensing", "sdk", "b2b", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://visagelabs.net"
Repository = "https://github.com/VISAGE-LABS/visage-sdk-python"
Documentation = "https://visagelabs.net/docs"

[tool.hatch.build.targets.wheel]
packages = ["visage"]
